--- a/site_django/filme/templates/criar_conta.html
+++ b/site_django/filme/templates/criar_conta.html
@@ -20,17 +20,17 @@
 
 
     <header class="min-h-screen bg-black bg-opacity-75 bg-blend-overlay showcase border-gray-600 border-b-2 flex justify-center items-center bg-no-repeat"  style="background-image: url('{% static 'images/background_netflix.jpg' %}');">
-        <div class="z-10 h-full py-32 md:py-0 text-gray-100 text-center flex items-center flex-col">
-            <form method="post">
+        <div class="z-10 h-full py-32 md:py-0 text-gray-100 text-center flex items-center flex-col width_size">
+            <form method="post" style="width: 100%">
                 {% csrf_token %}
                 <fieldset class="form-group">
                     <legend class="border-bottom mb-4">Crie uma conta</legend>
                     {{ form }}
                 </fieldset>
-                <button class="bg-red-600 py-1 my-2 px-3 w-full text-white md:text-lg rounded-md" type="submit">Fazer Login</button>
+                <button class="bg-red-600 py-1 my-2 px-3 w-full text-white md:text-lg rounded-md" type="submit">Criar Conta</button>
             </form>
             <small>
-                Não tem uma conta ainda? <p><a href="{% url 'filme:criar_conta' %}">Clique aqui para criar uma conta</a></p>
+                Já possui uma conta? <p><a href="{% url 'filme:login' %}">Clique aqui para fazer login</a></p>
             </small>
         </div>
     </header>
