--- a/site_django/filme/templates/pagina_perfil.html
+++ b/site_django/filme/templates/pagina_perfil.html
@@ -9,16 +9,21 @@ Editar Perfil
 
     <header class="min-h-screen bg-black bg-opacity-75 bg-blend-overlay showcase border-gray-600 border-b-8 flex justify-center items-center bg-no-repeat"  style="background-image: url('{% static 'images/background_netflix.jpg' %}');">
         <div class="z-10 h-full py-32 md:py-0 text-gray-100 text-center flex items-center flex-col">
-            <h2 class="text-2xl">{{ user.email }}</h2>
-            <form method="post">
-               {% csrf_token %}
-                <fieldset class="form-group">
-                    <legend class="border-bottom mb-4">Edite os campos abaixo para editar seu perfil</legend>
-                    {{ form }}
-                </fieldset>
-                <button class="bg-red-600 py-1 px-3 text-white md:text-lg rounded-md" type="submit">Editar Perfil</button>
-            </form>
-            <small><a href="{% url 'filme:alterar_senha' %}">Quer mudar sua senha?</a></small>
+            {% if url != request.user.id %}
+                <h2>Você não pode alterar esse usuário</h2>
+            {% else %}
+                <h2 class="text-2xl">{{ user.email }}</h2>
+                <form method="post">{% csrf_token %}
+                    <fieldset class="form-group">
+                        <legend class="border-bottom mb-4">Edite os campos abaixo para editar seu perfil</legend>
+                        {{ form }}
+                    </fieldset>
+                    <button class="bg-red-600 py-1 px-3 text-white md:text-lg rounded-md" type="submit">Editar Perfil</button>
+                </form>
+                <small><a href="{% url 'filme:alterar_senha' %}">Quer mudar sua senha?</a></small>
+            {% endif %}
+
+
         </div>
     </header>
 
